--- a/notebooks/ML.ipynb
+++ b/notebooks/ML.ipynb
@@ -2826,13 +2826,12 @@
     "import joblib\n",
     "\n",
     "#os.makedirs(\"/data/03_training_data\", exist_ok=True)\n",
-    "X_train.to_csv(r\"C:\\Users\\EL mahjoubi\\Desktop\\Prédiction-Consomation-Energie\\data\\03_training_data\\X_train.csv\")\n",
-    "X_test.to_csv(r\"C:\\Users\\EL mahjoubi\\Desktop\\Prédiction-Consomation-Energie\\data\\03_training_data\\X_test.csv\")\n",
-    "y_train.to_frame().to_csv(r\"C:\\Users\\EL mahjoubi\\Desktop\\Prédiction-Consomation-Energie\\data\\03_training_data\\y_train.csv\")\n",
-    "y_test.to_frame().to_csv(r\"C:\\Users\\EL mahjoubi\\Desktop\\Prédiction-Consomation-Energie\\data\\03_training_data\\y_test.csv\")\n",
+    "X_train.to_csv(\"data/03_training_data/X_train.csv\")\n",
+    "X_test.to_csv(\"data/03_training_data/X_test.csv\")\n",
+    "y_train.to_frame().to_csv(\"data/03_training_data/y_train.csv\")\n",
+    "y_test.to_frame().to_csv(\"data/03_training_data/y_test.csv\")\n",
     "\n",
-    "\n",
-    "\"../data/02_processed/processed_weather_and_consumption_data.csv\n"
+    "\n"
    ]
   },
   {
@@ -3581,25 +3580,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "9b45fe3c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C:\\\\Users\\\\EL mahjoubi\\\\Desktop\\\\Prédiction-Consomation-Energie\\\\data\\\\05_models\\\\lightgbm_model.pkl']"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "joblib.dump(rfr, r\"C:\\Users\\EL mahjoubi\\Desktop\\Prédiction-Consomation-Energie\\data\\05_models\\random_forest_model.pkl\")\n",
-    "joblib.dump(xgb, r\"C:\\Users\\EL mahjoubi\\Desktop\\Prédiction-Consomation-Energie\\data\\05_models\\xgboost_model.pkl\")\n",
-    "joblib.dump(lgb, r\"C:\\Users\\EL mahjoubi\\Desktop\\Prédiction-Consomation-Energie\\data\\05_models\\lightgbm_model.pkl\")\n"
+    "joblib.dump(rfr, \"data/05_models/random_forest_model.pkl\")\n",
+    "joblib.dump(xgb, \"data/05_models/xgboost_model.pkl\")\n",
+    "joblib.dump(lgb, \"data/05_models/lightgbm_model.pkl\")"
    ]
   },
   {
